<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:padding="10dp"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_utente"></TextView>

                <TextView
                    android:id="@+id/tvMatricola"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_matricola"></TextView>

                <TextView
                    android:id="@+id/tvCodiceStabilimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_codice_stabilimento"></TextView>

                <TextView
                    android:id="@+id/tvDescrizioneStabilimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_descrizione_stabilimento"></TextView>

                <TextView
                    android:id="@+id/SelezionaTipoGas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_seleziona_tipo_gas"></TextView>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>



            </LinearLayout>







    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>